--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "apache2redirects",
-  "version": "1.0.10",
+  "version": "1.1.1",
   "description": "Rediections Apache (httpd) in ExpressJS",
-  "main": "index.js",
+  "main": "lib/apache2Redirects.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/alejonext/Apache2Redirects#readme",
   "dependencies": {
+    "jasmine": "^3.3.0",
     "path-to-regexp": "0.1.7",
     "request": "2.88.0"
+  },
+  "devDependencies": {
+    "randexp": "^0.5.3"
   }
 }
